--- a/src/Board.css
+++ b/src/Board.css
@@ -1,7 +1,7 @@
 .board {
 	width: 300px; /* Total horizontal dimensions */
 	height: 300px; /* Total vertical dimensions */
-	display: grid; /* Enables CSS Grid */ 
+	display: none; /* Enables CSS Grid */ 
 	grid-template-columns: repeat(3, 1fr); /* Total horizontal space broken into 3 columns */
   grid-template-rows: repeat(3, 1fr); /* Total vertical space broken into 3 rows */
 }
@@ -9,3 +9,4 @@
 .box {
   border: 1px solid black; /* Shows the lines in the CSS grid */
 }
+
